# Learn2Card

./: .gitignore  README.md  cli  package-lock.json  package.json  sequenceDiagram.md  try2.txt
.cursor/: BUGBOT.md  BUGBOT_TRIGGER.md
.cursor/rules/: commit-messages-must-be-in-traditional-chinese.mdc
backend/: README.md  __init__.py  agent_a.py  api.py  cli.py  generate_test_deck.py  main.py  pipeline.py  pyproject.toml  test_deck.json  test_input.txt  test_output.json
backend/.cursor/: BUGBOT.md
backend/agent_a/: __init__.py  cards.py  cluster.py  embedding.py  keypoints.py  models.py  pipeline.py  segmenter.py  text_utils.py
backend/learn2cards/: __init__.py  agent_a.py  api.py  cli.py  models.py  pipeline.py  validate.py
docs/prd/: agent-a.md  agent-b.md  global.md
docs/spec/: technical-spec.md
frontend/: .env.example  index.html  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/.cursor/: BUGBOT.md
frontend/public/: deck.json  deck.sample.json
frontend/src/: App.css  App.tsx  deck.ts  deckValidator.ts  sampleDeck.ts  types.ts
src/: App.css  App.tsx  index.css
